Add --add-exports flags to make it compile